--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="../animations/anim.index.css" />
     <link rel="stylesheet" href="../fonts/fonts.index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
     <!-- ----------------------------------------------------------------- -->
   </head>
 
@@ -46,21 +50,23 @@
     </nav>
 
     <section class="resume" id="resume-container">
-      <a href="index.html">Close</a>
-      <iframe src="assets/pdf/leo_koivunen_cv.pdf" width="100%" height="800px"> </iframe>
+      <a href="index.html">CLOSE</a>
+      <iframe src="assets/pdf/leo_koivunen_cv.pdf" width="100%" height="850px"> </iframe>
     </section>
 
     <section class="home" id="01">
       <div class="container">
         <div class="left-col">
           <div class="text-container">
-            <p>I SPECIALIZE IN FRONT-END DEVELOPMENT</p>
+            <p>I SPECIALIZE IN FRONT-END.</p>
             <h2>Hi, I build interactive enterprise web applications with passion and experience</h2>
           </div>
 
           <div class="btn-container">
             <a href="#03" rel="noreferrer"><i class="fa-brands fa-github"></i> WORK</a>
-            <a href="#" id="resume" rel="noreferrer"><i class="fa-solid fa-file-alt"></i> RESUME</a>
+            <a href="#05" id="resume" rel="noreferrer"
+              ><i class="fa-solid fa-file-alt"></i> RESUME</a
+            >
           </div>
         </div>
       </div>
@@ -72,15 +78,12 @@
           <div class="text-container">
             <h2>02. About Me</h2>
             <p>
-              I am a front-end developer who likes to develop front-end web applications. I have a great passion and a positive mindset for
-              programming.
+              I am a front-end developer who enjoys to build front-end web applications. I have a
+              passion and a positive mindset for programming.
               <br />
               <br />
-              I like to build enterprise applications with the best and fastest technologies to provide a great user experience.
-              <br />
-              <br />
-              I can help you build your application and grow your business with the best interfaces and features
-              <i class="fa-solid fa-hand-peace"></i>
+              I choose my dev stack carefully it relies on the job we are working on. Specializing
+              in many stacks is not as promising as specializing in one stack.
             </p>
           </div>
         </div>
@@ -106,14 +109,18 @@
               <div class="card-text-container">
                 <h4>Weather Tracker</h4>
                 <p>
-                  Track your weather everyday and replan your schedule using simple weather tracking on the web. It includes weather API and
-                  functionality for tracking weather.
+                  Track your weather and plan your schedule better using a weather tracking service
+                  on the web for free.
                 </p>
               </div>
 
               <div class="card-btn-container">
-                <a href="https://weather-trackerr.netlify.app/" target="_blank">Preview <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                <a href="https://github.com/devmailar/weather-tracker" target="_blank">Source <i class="fa-brands fa-github"></i></a>
+                <a href="https://weather-trackerr.netlify.app/" target="_blank"
+                  >Preview <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+                <a href="https://github.com/devmailar/weather-tracker" target="_blank"
+                  >Source <i class="fa-brands fa-github"></i
+                ></a>
               </div>
             </section>
 
@@ -125,14 +132,18 @@
               <div class="card-text-container">
                 <h4>MovieLand</h4>
                 <p>
-                  Check out the top movies at any time includes IMBD ratings. The information is from trusted API so it is reliable and good. It's
-                  using moviedb.org API.
+                  Check out the top 20 movies right now. Choose genres you like and search for the
+                  movie based on picked genre.
                 </p>
               </div>
 
               <div class="card-btn-container">
-                <a href="https://movieapp-project.netlify.app/" target="_blank">Preview <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                <a href="https://github.com/devmailar/MovieLand" target="_blank">Source <i class="fa-brands fa-github"></i></a>
+                <a href="https://movieapp-project.netlify.app/" target="_blank"
+                  >Preview <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+                <a href="https://github.com/devmailar/MovieLand" target="_blank"
+                  >Source <i class="fa-brands fa-github"></i
+                ></a>
               </div>
             </section>
 
@@ -144,14 +155,18 @@
               <div class="card-text-container">
                 <h4>Todo List</h4>
                 <p>
-                  Simple todo app that provides a simple interface for working with multi-tasks. It is free and simple to create a list of tasks and
-                  mark them as completed.
+                  Use this application for easy multi-tasking, friendly-ui and much more. It helps
+                  you to organize your assignments.
                 </p>
               </div>
 
               <div class="card-btn-container">
-                <a href="https://todo-app-mailar.netlify.app/" target="_blank">Preview <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                <a href="https://github.com/devmailar/todo-app" target="_blank">Source <i class="fa-brands fa-github"></i></a>
+                <a href="https://todo-app-mailar.netlify.app/" target="_blank"
+                  >Preview <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+                <a href="https://github.com/devmailar/todo-app" target="_blank"
+                  >Source <i class="fa-brands fa-github"></i
+                ></a>
               </div>
             </section>
           </div>
@@ -164,38 +179,23 @@
         <div class="left-col">
           <div class="text-container">
             <h2>04. Contact Me</h2>
+            <h3>Let's collaborate together!</h3>
           </div>
-          <form class="form-container" action="POST" data-netlify="true">
-            <div class="field">
-              <label for="name">Name</label>
-              <input type="text" name="name" id="name" required />
+          <form class="form-container" action="mailto:leo.s.koivunen@gmail.com" method="POST">
+            <div class="flex">
+              <div class="input-container">
+                <input type="submit" value="CONTACT" />
+              </div>
+              <div class="link-container">
+                <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <a href="https://github.com/devmailar" target="_blank"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </div>
             </div>
-            <div class="field">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" required />
-            </div>
-            <div class="field">
-              <label for="message">Message</label>
-              <textarea name="message" id="message" required></textarea>
-            </div>
-            <div class="field" id="netlify">
-              <div data-netlify-recaptcha="true"></div>
-            </div>
-            <input type="submit" value="submit" />
           </form>
-        </div>
-
-        <div class="right-col">
-          <div class="text-container">
-            <h3>
-              Let's grow your business together to the next level.
-            </h3>
-          </div>
-
-          <div class="link-container">
-            <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/devmailar" target="_blank"><i class="fab fa-github"></i></a>
-          </div>
         </div>
       </div>
     </section>
