Update design card component

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
           <div class="text-container">
             <h2>02. About Me</h2>
             <p>
-              I am a front-end developer who enjoys to build front-end web applications. I have a
+              I am a front-end developer who enjoys building front-end web applications. I have a
               passion and a positive mindset for programming.
               <br />
               <br />
-              I choose my dev stack carefully it relies on the job we are working on. Specializing
-              in many stacks is not as promising as specializing in one stack.
+              I picked my development stack based on the job. I say that being good at many code
+              stacks is not as good as being very good at couple.
             </p>
           </div>
         </div>
